--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "movie-app",
   "private": true,
@@ -12,7 +11,8 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
